--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 50px;
-  background-image: url("../images/electronicsleep-background.jpg");
+  //background-image: url("../images/electronicsleep-background.jpg");
 }
 .starter-template {
   padding: 40px 15px;
