--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,19 @@
-body { text-align : center; }
+body {
+  padding-top: 50px;
+  text-align : center;
+}
+
+.template {
+  padding: 40px 15px;
+  text-align: center;
+}
+
+a::before {
+  display: block;
+  content: " ";
+  padding-top 100px;
+  margin-top: -100px;
+  height: 100px;
+  visibility: hidden;
+  pointer-events: none;
+}
